--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
     
                 <select name="regions" id="" class="region-select">
                     <option value="" selected>Filter by Region <i class="fas fa-chevron-down"></i></option>
-                    <option value="">Africa</option>
-                    <option value="">America</option>
-                    <option value="">Asia</option>
-                    <option value="">Europe</option>
-                    <option value="">Oceania</option>
+                    <option value="Africa">Africa</option>
+                    <option value="Americas">Americas</option>
+                    <option value="Asia">Asia</option>
+                    <option value="Europe">Europe</option>
+                    <option value="Oceania">Oceania</option>
                 </select>
             </div>
             <section class="countries">
@@ -72,6 +72,6 @@
     </main>
 
     <script src="https://kit.fontawesome.com/02d2a67a13.js" crossorigin="anonymous"></script>
-    <script src="./app.js"></script>
+    <script src="./app.js" type="module"></script>
 </body>
 </html>
