page transition update

--- a/country-info.html
+++ b/country-info.html
@@ -26,7 +26,7 @@
                 Back
             </a>
         </div>
-        <section class="country-info">
+        <section class="country-info page-transition-away">
             <div class="country-info__flag">
                 <img src="" alt="">
             </div>
