--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <option value="Oceania">Oceania</option>
                 </select>
             </div>
-            <section class="countries">
+            <section class="countries page-transition-away">
                 <ul class="countries-list">
                     <!-- <li class="country-card">
                         <a class="country-card-area" href="./country-info.html">
