--- a/country-info.html
+++ b/country-info.html
@@ -13,9 +13,9 @@
             <div class="header-title">
                 <h1>Where in the world?</h1>
             </div>
-            <div class="">
+            <!-- <div class="">
                 <button class="button-mode">Dark Mode</button>
-            </div>
+            </div> -->
         </div>
     </header>
 
