--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>REST countries project</title>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
@@ -14,9 +14,9 @@
             <div class="header-title">
                 <h1>Where in the world?</h1>
             </div>
-            <div class="">
+            <!-- <div class="">
                 <button class="button-mode">Dark Mode</button>
-            </div>
+            </div> -->
         </div>
     </header>
     <main>
