fixed image sizing issue, and country page sizing issue

--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
             <div class="header-title">
                 <h1>Where in the world?</h1>
             </div>
-            <!-- <div class="">
-                <button class="button-mode">Dark Mode</button>
-            </div> -->
         </div>
     </header>
     <main>
@@ -46,7 +43,9 @@
                 <ul class="countries-list">
                     <!-- <li class="country-card">
                         <a class="country-card-area" href="./country-info.html">
-                            <img class="country-card-flag" src="https://restcountries.eu/data/afg.svg" alt="">
+                            <div class="country-card-flag-container">
+                                <img class="country-card-flag" src="https://restcountries.eu/data/afg.svg" alt="">
+                            </div>
                             <div class="country-card-brief">
                                 <h2 class="country-name">Country Name</h2>
                                 <p class="country-pop">Population:<span></span></p>
